# rust-hc-crud-caps

./: Cargo.toml  Makefile
src/: entities.rs  lib.rs
tests/zomes/happy_path/: Cargo.toml
